tests/security/IndirectGetAssignment/output.txt
ERROR: TaintedData - input.hack:58:6 - Data from a URL query string found its way to an HTML tag